2012-06-24  Adam Barth  <abarth@webkit.org>

        Remove USE(CHROMIUM_NET) because it is unused
        https://bugs.webkit.org/show_bug.cgi?id=89850

        Reviewed by Eric Seidel.

        I didn't see any mentions of CHROMIUM_NET when I grepped the Source
        directory. Also, this USE macro isn't defined on OS(DARWIN) or
        OS(ANDROID), which seems a bit odd given that Chromium uses the same
        network stack on all platforms.

        * wtf/Platform.h:

2012-06-22  Peter Beverloo  <peter@chromium.org>

        [Chromium] Disable c++0x compatibility warnings in JavaScriptCore.gyp when building for Android
        https://bugs.webkit.org/show_bug.cgi?id=88853

        Reviewed by Steve Block.

        The Android exclusions were necessary to fix a gyp generation error, as
        the gcc_version variable wasn't being defined for Android. Remove these
        exceptions when Chromium is able to define the gcc_version variable.

        * WTF.gyp/WTF.gyp:

2012-06-18  Gustavo Noronha Silva  <gustavo.noronha@collabora.com>

        Causes crashes in LLVMPipe
        https://bugs.webkit.org/show_bug.cgi?id=89358

        Reviewed by Martin Robinson.

        Change suggested by Dave Airlie and Xan Lopez.

        * wtf/Platform.h: disable global fastMalloc for GTK+

2012-06-22  Mario Sanchez Prada  <msanchez@igalia.com>

        Memory corruption on HashTable.h
        https://bugs.webkit.org/show_bug.cgi?id=88419

        Reviewed by Martin Robinson.

        Simplify definition of WTF_USE_PTHREADS and HAVE_PTHREAD_RWLOCK
        for the GTK platform using OS(LINUX) instead of HAVE(PTHREAD_H).

        * wtf/Platform.h:

2012-06-21  Parth Patel  <parpatel@rim.com>

        [Blackberry] BlackBerry::Platform::Settings::get() rename to BlackBerry::Platform::Settings::instance() to make it consistent with our other singletons
        https://bugs.webkit.org/show_bug.cgi?id=89684

        Reviewed by Yong Li.
        